<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Root">

    <LinearLayout style="@style/ActionBar">
        <ImageButton android:id="@+id/login_back_button"
            android:src="@drawable/ic_arrow_left"
            style="@style/ActionBarIconButton" />

        <TextView android:text="@string/login_title_label"
            style="@style/ActionBarTitle" />
    </LinearLayout>

    <ScrollView android:id="@+id/login_scroll"
        style="@style/ScrollContainer">

        <LinearLayout style="@style/Form">
            <TextView android:text="@string/login_info_label"
                style="@style/FormInfo" />

            <LinearLayout style="@style/FormField">
                <TextView android:text="@string/login_username_label"
                    style="@style/FormLabel" />

                <EditText android:id="@+id/login_username_input"
                    android:inputType="text"
                    style="@style/FormInput">

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout style="@style/FormField">
                <TextView android:text="@string/login_password_label"
                    style="@style/FormLabel" />

                <EditText android:id="@+id/login_password_input"
                    android:inputType="textPassword"
                    style="@style/FormInput" />
            </LinearLayout>

            <LinearLayout style="@style/FormField">
                <Button android:id="@+id/login_login_button"
                    android:text="@string/login_login_button"
                    style="@style/FormButton" />
            </LinearLayout>

            <TextView android:text="@string/login_footer_label"
                style="@style/FormFooter" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
