<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Root">

    <!-- Webview page -->
    <LinearLayout android:id="@+id/main_webview_page"
        style="@style/Root">

        <LinearLayout style="@style/ActionBar">
            <TextSwitcher android:id="@+id/main_webview_title_label"
                style="@style/ActionBarTitleSwitcher">

                <TextView style="@style/ActionBarTitleSwitcherText" />
                <TextView style="@style/ActionBarTitleSwitcherText" />
            </TextSwitcher>

            <ImageButton android:id="@+id/main_webview_settings_button"
                android:src="@drawable/ic_settings"
                style="@style/ActionBarIconButton" />
        </LinearLayout>

        <WebView android:id="@+id/main_webview_webview"
            style="@style/Container" />
    </LinearLayout>

    <!-- Disconnected page -->
    <LinearLayout android:id="@+id/main_disconnected_page"
        android:visibility="gone"
        style="@style/Root">

        <LinearLayout style="@style/ActionBar">
            <TextView android:text="@string/app_name"
                style="@style/ActionBarTitle" />

            <ImageButton android:id="@+id/main_disconnected_refresh_button"
                android:src="@drawable/ic_refresh"
                style="@style/ActionBarIconButton" />

            <ImageButton android:id="@+id/main_disconnected_settings_button"
                android:src="@drawable/ic_settings"
                style="@style/ActionBarIconButton" />
        </LinearLayout>

        <ScrollView android:id="@+id/main_disconnected_scroll"
            style="@style/Scroll">

            <LinearLayout style="@style/Hero">
                <ImageView android:src="@drawable/ic_wifi_off"
                    style="@style/HeroIcon" />

                <TextView android:text="@string/main_disconnected_title_label"
                    style="@style/HeroTitle" />

                <TextView android:text="@string/main_disconnected_description_label"
                    style="@style/HeroDescription" />

                <Button android:id="@+id/main_disconnected_hero_button"
                    android:text="@string/main_disconnected_hero_button"
                    style="@style/HeroButton" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>
